[project]
name = "ComfyUI-nhknodes"
description = "ComfyUI custom nodes collection with workflow utilities, image processing, and AI integration"
version = "1.0.3"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["openai>=1.101.0", "pillow", "requests", "torch", "numpy"]

[project.urls]
Repository = "https://github.com/Enashka/ComfyUI-nhknodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Enashka/ComfyUI-nhknodes/wiki"
"Bug Tracker" = "https://github.com/Enashka/ComfyUI-nhknodes/issues"

[tool.comfy]
PublisherId = "enashka"
DisplayName = "ComfyUI-nhknodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

